styles/produtos.css
 main {
  min-height: 70vh;
  margin: 0;
  padding: 0;
 }

 .filtersArea{
  width: 100%;
  height: 10px;
 }
 .filter {
    text-align: center;
    margin-bottom: 20px;
  }

  .filter button {
    background-color: #333;
    color: #fff;
    border: none;
    border-radius: 5px;
    padding: 8px 20px;
    font-size: 16px;
    cursor: pointer;
  }

  .mobileFilterMenuButton {
    display: none;
  }

  .container {
    margin-top: 50px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    max-width: 80vw;
  }

  .card {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 300px;
    margin: 20px;
    background-color: #fff;
    border-radius: 10px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
    overflow: hidden;
    transition: transform 0.3s ease;
  }

  .card:hover {
    transform: scale(1.05);
  }

  .card img {
    width: 100%;
    height: auto;
    object-fit: cover;
    filter: brightness(70%);
    transition: filter 0.3s ease;
    cursor: pointer;
  }

  .card:hover img {
    filter: brightness(100%);
  }

  .card-content {
    padding: 20px;
  }

  .card h3 {
    margin: 0;
    font-size: 18px;
    color: #00013b;
    margin-bottom: 10px;
    height: 5vh;
  }

  .details-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease, visibility 0s linear 0.3s;
    z-index: 999;
  }

  .details-overlay.active {
    opacity: 1;
    visibility: visible;
    transition-delay: 0s;
  }

  .details {
    background-color: rgba(255, 255, 255, 0.9);
    border-radius: 10px;
    padding: 20px;
    max-width: 400px;
    max-height: 400px;
    overflow-y: auto;
    display: none;
  }

  .details h2 {
    margin: 0;
    font-size: 24px;
    color: #333;
    margin-bottom: 10px;
  }

  .details p {
    font-size: 16px;
    color: #555;
    margin-bottom: 20px;
  }

  .close-details {
    display: flex;
    justify-content: flex-end;
    margin-top: 10px;
  }

  .close-details button {
    background: none;
    border: none;
    cursor: pointer;
    font-size: 16px;
    color: #999;
  }

  .container div img {
    height: 20em;
    object-fit: fill;
    border-radius: 8px;
  }

  .abafador,
  .avental,
  .calçados,
  .capacete,
  .equipamentos,
  .ferramentas,
  .filtros,
  .luvas,
  .mascaras,
  .oculos{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    align-items: center;
    justify-content: center;
  }

  @media (max-width: 800px) {
    .filtersArea {
      background: #33333336;
      width: 100%;
      height: 6.5vh;
      display: flex;
      justify-content: center;
      align-items: center;
    }
    .filter{
      display: none;
    }
    .filtersCard{
      width: 70vw;
      height: 100%;
      display: flex;
      justify-content: space-between;
      align-items: center;
      margin-left: 40px;
      margin-right: 40px;
    }
    .searchBar{
      border-radius: 10px;
      width: 15rem;
      height: 75%;
      
    }
    .mobileFilterMenuButton{
      display: block;
      height: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
    }
    .mobileFilterMenuButton button{
      width: 75px;
      height: 75%;
      border-radius: 10px;
    }



    .container {
      padding: 10px;
    }

    .card {
      width: 10em;
      max-width: 40em;
      margin: 10px;
    }

    .container div img {
      height: 10em;
      
    }

    .details {
      max-width: 90%;
      max-height: 90%;
    }
  }

